# accelrometer_calibration

./: CMakeLists.txt  README.md
src/: IMU_i2c.c  imu_lib.cpp  main.cpp
